added community files

--- a/HTML/Mentee-dashboard/Ali-chat.html
+++ b/HTML/Mentee-dashboard/Ali-chat.html
@@ -111,7 +111,8 @@
             
             <div class="home-content mt-5">
                 <div class="profile-wrapper d-flex align-items-center">
-                    <div class="profile-img">
+                    <div class="profile-img d-flex gap-2">
+                        <img src="/Images/left-straight-arrow.png" alt="" onclick="window.location.href='./chats.html'">
                         <img
                             src="/Images/Ali.svg"
                             alt="" class="w-100"
