--- a/HTML/Mentee-dashboard/Mentee-m-search-results.html
+++ b/HTML/Mentee-dashboard/Mentee-m-search-results.html
@@ -57,7 +57,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href="../landingpage.html"
 									>Home</a
 								>
 							</li>
@@ -65,7 +65,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./mentee-dashboard-1.html"
 									>Dashboard</a
 								>
 							</li>
@@ -117,105 +117,12 @@
 			</nav>
 		</header>
 		<main>
-			<section class="main-sec mt-5 pt-5 d-flex gap-5">
+			<section class="main-sec mt-5 pt-5 d-flex gap-5 mb-5">
 				<!-- side navbar -->
-				<div class="sidebar d-flex flex-column gap-4">
-					<div class="profile-wrapper d-flex gap-3 mt-4">
-						<img
-							src="/Images/dashboard-profile.svg"
-							alt="" class="w-50"
-						/>
-						<div class="profile-content">
-							<h2 class="fs-4">John Doe</h2>
-							<a href="./mentee-profile.html">View profile</a>
-						</div>
-					</div>
-					<div
-						class="links-wrapper d-flex flex-column gap-5 position-fixed-start"
-					>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/home-icon.svg"
-								alt=""
-							/>
-							<a
-								href="./Mentee-booking-response.html"
-								class="text-black ms-2"
-								>Home</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/message.svg"
-								alt=""
-							/>
-							<a
-								href="./groups-chats.html"
-								class="text-black ms-2"
-								>Messages</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/booking-icon.svg"
-								alt=""
-							/>
-							<a
-								href="./bookings.html"
-								class="text-black ms-2"
-								>Bookings</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/connection-icon.svg"
-								alt=""
-							/>
-							<a
-								href="connections.html"
-								class="text-black ms-2"
-								>Connections</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/milestones-trophy.svg"
-								alt=""
-							/>
-							<a
-								href="./achievements.html"
-								class="text-black ms-2"
-								>Milestones</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/connection-icon.svg"
-								alt=""
-							/>
-							<a
-								href="./group-sessions.html"
-								class="text-black ms-2"
-								>Group sessions</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/settings-icon.png"
-								alt=""
-								class="settings-icon"
-							/>
-							<a
-								href=""
-								class="text-black ms-2"
-								>Setting</a
-							>
-						</div>
-					</div>
-				</div>
-				<div class="home-content mt-5 w-100">
-					<h4 class="fs-5">Profile</h4>
-					<hr class="w-75 mt-5 mb-5" />
+				
+				<div class="home-content mt-5 mb-5">
+					<h4 class="fs-4">Profile</h4>
+					<hr class="w-100 mb-5" />
 					<div class="profile-wrapper d-flex align-items-center gap-4">
 						<div class="profile-img">
 							<img
@@ -262,8 +169,8 @@
 							Book
 						</button>
 					</div>
-					<div class="card-wrapper d-flex gap-5 w-75 mt-4">
-						<div class="card w-100 my-5 border-light card-1">
+					<div class="card-wrapper d-flex justify-content-between w-100 mt-4">
+						<div class="card my-5 border-light card-1 px-3 py-3">
 							<div class="card-body ms-3">
 								<h5 class="card-title mt-3 mb-3">About Me</h5>
 								<p class="card-text mb-4">
@@ -283,9 +190,9 @@
 								</p>
 							</div>
 						</div>
-						<div class="card-2-wrapper w-50 card-2">
+						<div class="card-2-wrapper card-2">
                             <h5 class="text-center">REVIEWS</h5>
-                            <div class="card w-100 border-light  ">
+                            <div class="card w-100 border-light px-3 py-3">
                                 <div class="card-body ms-3">
                                     <img
                                         src="/Images/christopher-campbell-rdeo-vt-e-7-v-os-unsplash-1.png"
