--- a/HTML/Mentee-dashboard/ag-group-chat.html
+++ b/HTML/Mentee-dashboard/ag-group-chat.html
@@ -117,8 +117,9 @@
 				<!-- side navbar -->
 				
 				<div class="home-content mt-5 ">
-					<div class="profile-wrapper d-flex align-items-center w-50 mx-auto">
-						<div class="profile-img">
+					<div class="profile-wrapper d-flex align-items-center gap-3">
+						<div class="profile-img d-flex gap-3">
+							<img src="/Images/left-straight-arrow.png" alt="" onclick="window.location.href='./groups-chats.html'">
 							<img
 								src="/Images/group-image.svg"
 								alt=""
