--- a/HTML/Mentee-dashboard/joining-coach.html
+++ b/HTML/Mentee-dashboard/joining-coach.html
@@ -114,8 +114,15 @@
             <img src="/Images/left-arrow.svg" alt="" class="ms-5 mt-5" onclick="window.location.href='./bookings.html'">
             <div class="content d-flex flex-column justify-content-center align-items-center">
                 <img src="/Images/logo-no-bg.png" alt="" class="img1">
-                <img src="/Images/waiting.svg" alt="" class="img2 mb-5">
+                <img src="/Images/waiting.svg" alt="" class="img2 mb-5 loading-spinner">
                 <p class="fs-2">Waiting for Coach to join</p>
+            </div>
+            <div class="leave d-flex justify-content-end">
+                <a
+                                href="#"
+                                class="btn btn-danger py-2 px-4 ms-3 fs-5 text-white" onclick="window.location.href='./bookings.html'"
+                                >Leave Meeting</a
+                            >
             </div>
         </section>
     </main>
