--- a/HTML/Mentor-dashboard/Mentor-dashboard.html
+++ b/HTML/Mentor-dashboard/Mentor-dashboard.html
@@ -20,7 +20,7 @@
 			rel="stylesheet"
 			href="/CSS/mentor-dashboard.css"
 		/>
-		<title>Mentee's Booking Response</title>
+		<title>Mentor Dashboard</title>
 	</head>
 	<body>
 		<header>
@@ -103,8 +103,8 @@
 									alt=""
 								/>
 								<img
-									src="/Images/dashboard-profile.svg"
-									alt=""
+									src="/Images/Peter.svg"
+									alt="" class="w-25"
 								/>
 								<img
 									src="/Images/symbols-arrow-drop-down.svg"
@@ -122,12 +122,12 @@
 				<div class="sidebar d-flex flex-column gap-4 ps-3">
 					<div class="profile-wrapper d-flex gap-3 mt-4">
 						<img
-							src="/Images/Ali.svg"
-							alt="" class="w-50"
+							src="/Images/Peter.svg"
+							alt="" class="w-25"
 						/>
 						<div class="profile-content">
-							<h2 class="fs-4">Ali <br />Mohammed</h2>
-							<a href="">View profile</a>
+							<h2 class="fs-4">Peter David</h2>
+							<a href="./profile.html">View profile</a>
 						</div>
 					</div>
 					<div
@@ -139,9 +139,9 @@
 								alt=""
 							/>
 							<a
-								href=".../index.html"
+								href=""
 								class="ms-2"
-								>Home</a
+								>Waitlist</a
 							>
 						</div>
 						<div class="icon-links">
@@ -166,16 +166,23 @@
 								>Bookings</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links position-relative ">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
-								>Connections</a
+								href="#"
+								class="ms-2 community-link"
+								>Community</a
 							>
+								<div class="card w-100 px-2 position-absolute card3">
+									<a href="./create-post.html">Create New Post</a>
+									<a href="./my-posts.html">My Post</a>
+									<a href="./trending.html">Trending</a>
+									<a href="./new-posts.html">New Posts</a>
+								</div>
+							
 						</div>
 						<div class="icon-links">
 							<img
@@ -215,24 +222,71 @@
 				</div>
 				<!-- content -->
 				<div class="home-content mt-5 w-100">
-					<h4 class="fs-5 mb-5">Bookings</h4>
+					<h4 class="fs-4">Profile</h4>
+					<hr class="mb-4">
+					<div class="profile-wrapper d-flex align-items-center gap-4 mb-5">
+						<div class="profile-img">
+							<img
+								src="/Images/Peter-Profile.svg"
+								alt=""
+							/>
+						</div>
+						<div class="profile-text">
+							<h5 class="mb-2">Peter David</h5>
+							<p >Lead Product Designer at LinkedIn</p>
+							<p>10 years experience</p>
+							<p class="mb-3">Time zone Nigeria (GMT+1)</p>
+							<p>
+								Rating:
+								<span class="ms-2">
+									<img
+										src="/Images/star.svg"
+										alt=""
+									/>
+									<img
+										src="/Images/star.svg"
+										alt=""
+									/>
+									<img
+										src="/Images/star.svg"
+										alt=""
+									/>
+									<img
+										src="/Images/star.svg"
+										alt=""
+									/>
+									<img
+										src="/Images/star-half.svg"
+										alt=""
+									/>
+								</span>
+							</p>
+						</div>
+						<!-- <button
+							class="btn btn-2 btn-outline-light px-5 py-2"
+							type="submit"
+							onclick="window.location.href=''"
+						>
+							Book Coach
+						</button> -->
+					</div>
 					<a
 						href=""
-						class="me-5 pe-5"
+						class="me-5 pe-5 fs-5"
 						>Upcoming</a
 					>
 					<a
 						href=""
-						class="mx-5 px-5 text-black"
+						class="mx-5 px-5 text-black fs-5"
 						>Waitlist</a
 					>
 					<a
 						href=""
-						class="ms-5 ps-5 text-black"
+						class="ms-5 ps-5 text-black fs-5"
 						>History</a
 					>
-					<hr class="w-100 mb-5" />
-					<div class="card text-center mb-3 w-75">
+					<!-- <hr class="w-100 mb-5" /> -->
+					<div class="card text-center mb-3 w-75 mt-4">
 						<div class="card-body my-5">
 							<h5 class="card-title">Mentorship session with John Doe</h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
@@ -254,7 +308,38 @@
 							<a
 								href="#"
 								class="btn btn-2 py-2 px-4 fs-5"
-								>Add Connection</a
+								>Join Meeting</a
+							>
+							<a
+								href="../Mentee-dashboard/Ali-chat.html"
+								class="btn btn-light border border-secondary-subtle ms-5 py-2 px-4 fs-5"
+								>Send Message</a
+							>
+						</div>
+					</div>
+					<div class="card text-center mb-3 w-75">
+						<div class="card-body my-5">
+							<h5 class="card-title">Mentorship session with Travis White</h5>
+							<div class="card-text d-flex justify-content-evenly my-5">
+								<div class="card-date d-flex gap-3">
+									<img
+										src="/Images/uit-calender.svg"
+										alt=""
+									/>
+									<p class="fs-5">Mon, Aug 12</p>
+								</div>
+								<div class="card-date d-flex gap-3">
+									<img
+										src="/Images/booking-icon.svg"
+										alt=""
+									/>
+									<p class="fs-5">7:30 PM - 8:00 PM</p>
+								</div>
+							</div>
+							<a
+								href="#"
+								class="btn btn-2 py-2 px-4 fs-5"
+								>Join Meeting</a
 							>
 							<a
 								href="../Mentee-dashboard/Ali-chat.html"
@@ -271,5 +356,6 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
+		<script src="/community.js"></script>
 	</body>
 </html>
