added more community files

--- a/HTML/AgileCoaches-dashboard/agile-coach-dashboard.html
+++ b/HTML/AgileCoaches-dashboard/agile-coach-dashboard.html
@@ -169,6 +169,23 @@
 								>Bookings</a
 							>
 						</div>
+						<div class="icon-links position-relative">
+							<img
+								src="/Images/connection-icon.svg"
+								alt=""
+							/>
+							<a
+								href="#"
+								class="ms-2 community-link "
+								>Community</a
+							>
+							<div class="card w-100 px-2 position-absolute card3">
+								<a href="../Agile-Coach/create-post.html">Create New Post</a>
+								<a href="../Agile-Coach/my-posts.html">My Post</a>
+								<a href="../Agile-Coach/trending.html">Trending</a>
+								<a href="../Agile-Coach/new-posts.html">New Posts</a>
+							</div>
+						</div>
 						<div class="icon-links">
 							<img
 								src="/Images/connection-icon.svg"
@@ -400,5 +417,6 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
+		<script src="/community.js"></script>
 	</body>
 </html>
