--- a/HTML/Mentee-dashboard/book-mentor.html
+++ b/HTML/Mentee-dashboard/book-mentor.html
@@ -70,7 +70,7 @@
 									class="nav-link fs-5"
 									id="nav-link2"
 									href="#"
-									>Responses</a
+									>Resources</a
 								>
 							</li>
 							<div class="btn-div d-flex gap-4 position-relative">
