--- a/HTML/Mentee-dashboard/bookings.html
+++ b/HTML/Mentee-dashboard/bookings.html
@@ -168,6 +168,17 @@
                                 alt=""
                             />
                             <a
+                                href="#"
+                                class="text-black ms-2 community-link"
+                                >Community</a
+                            >
+                        </div>
+                        <div class="icon-links ps-3">
+                            <img
+                                src="/Images/connection-icon.svg"
+                                alt=""
+                            />
+                            <a
                                 href="./connections.html"
                                 class="text-black ms-2"
                                 >Connections</a
@@ -306,5 +317,6 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
+        <script src="/community.js"></script>
     </body>
 </html>
