--- a/HTML/Mentee-dashboard/mentee-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-dashboard-1.html
@@ -61,7 +61,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./mentee-coach-dashboard-1.html"
 									>Dashboard</a
 								>
 							</li>
@@ -70,7 +70,7 @@
 									class="nav-link fs-5"
 									id="nav-link2"
 									href="#"
-									>Responses</a
+									>Resources</a
 								>
 							</li>
 							<div class="btn-div d-flex gap-4 position-relative">
@@ -237,10 +237,10 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href=""
 									>
 									<img src="/Images/home-icon.svg" alt="">
-									Home</a
+									Join Waitlist</a
 								>
 							</li>
 							<li class="nav-item">
@@ -354,9 +354,9 @@
 								alt=""
 							/>
 							<a
-								href="./Mentee-booking-response.html"
+								href=""
 								class="text-black ms-2"
-								>Home</a
+								>Join Waitlist</a
 							>
 						</div>
 						<div class="icon-links ps-3">
@@ -380,6 +380,23 @@
 								class="text-black ms-2"
 								>Bookings</a
 							>
+						</div>
+						<div class="icon-links ps-3 position-relative">
+							<img
+								src="/Images/connection-icon.svg"
+								alt=""
+							/>
+							<a
+								href="#"
+								class="text-black ms-2 community-link"
+								>Community</a
+							>
+							<div class="card w-100 px-2 position-absolute card3">
+								<a href="./create-post.html">Create New Post</a>
+								<a href="./my-posts.html">My Post</a>
+								<a href="./trending.html">Trending</a>
+								<a href="./new-posts.html">New Posts</a>
+							</div>
 						</div>
 						<div class="icon-links ps-3">
 							<img
@@ -814,5 +831,6 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
+		<script src="/community.js"></script>
 	</body>
 </html>
