--- a/HTML/SearchPage.html
+++ b/HTML/SearchPage.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="SearchPage.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/CSS/SearchPage.css" />
     <title>Search page</title>
   </head>
   <body>
@@ -68,8 +69,18 @@
           </div>
         </div>
       </nav>
+      <!-- search bar -->
+      
     </header>
+    
     <main>
+      <div class="search-bar">
+        <form action="">
+          <input type="text" name="search" id="search" placeholder="Product design">
+          <i class="fa-solid  fa-magnifying-glass"></i>
+          <i class="fa-solid  fa-filter"></i>
+        </form>
+      </div>
       <section class="sec-1">
         <h1>Agile Mentors</h1>
         <div class="row">
