resources and waitlist connection added.

--- a/HTML/Agile-Coach/dashboard1.html
+++ b/HTML/Agile-Coach/dashboard1.html
@@ -20,7 +20,7 @@
 			rel="stylesheet"
 			href="/CSS/agile-dashboard1.css"
 		/>
-		<title>Agile dasboard1</title>
+		<title>Agile dashboard1</title>
 	</head>
 	<body>
 		<header>
