--- a/HTML/Agile-Coach/waitlist.html
+++ b/HTML/Agile-Coach/waitlist.html
@@ -67,8 +67,8 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
-                                >Responses</a
+                                href="./resource.html"
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
