--- a/HTML/AgileCoaches-dashboard/agile-coach-dashboard.html
+++ b/HTML/AgileCoaches-dashboard/agile-coach-dashboard.html
@@ -130,7 +130,7 @@
 						<div class="profile-content">
 							<h2 class="fs-4">Steve Brishton</h2>
 							<br>
-							<a class="view" href="">View profile</a>
+							<a class="view" href="../Agile-Coach/dashboard1.html">View profile</a>
 						</div>
 					</div>
 					<div
@@ -142,7 +142,7 @@
 								alt=""
 							/>
 							<a
-								href=".../index.html"
+								href="../Agile-Coach/waitlist.html"
 								class="ms-2"
 								>Waitlist</a
 							>
