--- a/HTML/Mentee-dashboard/mentee-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-dashboard-1.html
@@ -69,7 +69,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="resource.html"
 									>Resources</a
 								>
 							</li>
@@ -517,9 +517,11 @@
 											alt=""
 										/>
 										<br />
-										<button class="btn btn-2 px-4 py-1 fs-5 ms-4 mt-3">
-											Book Mentor
-										</button>
+										
+											<button class="btn btn-2 px-4 py-1 fs-5 ms-4 mt-3">
+												Book Mentor
+											</button>
+										
 									</div>
 								</div>
 							</div>
