added page connections

--- a/HTML/Mentee-dashboard/Mentee-booking-response.html
+++ b/HTML/Mentee-dashboard/Mentee-booking-response.html
@@ -57,7 +57,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href="../landingpage.html"
 									>Home</a
 								>
 							</li>
@@ -65,7 +65,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./bookings.html"
 									>Dashboard</a
 								>
 							</li>
@@ -73,8 +73,8 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
-									>Responses</a
+									href="./resource.html"
+									>Resources</a
 								>
 							</li>
 							<div class="btn-div d-flex gap-4 position-relative">
@@ -139,7 +139,7 @@
 								src="/Images/home-icon.svg"
 								alt="" 
 							/>
-							<a href="./Mentee-booking-response.html" class="ms-2">Home</a>
+							<a href="./Mentee-booking-response.html" class="ms-2">Join waitlist</a>
 						</div>
 						<div class="icon-links">
 							<img
