--- a/HTML/Mentee-dashboard/Mentor_booking.html
+++ b/HTML/Mentee-dashboard/Mentor_booking.html
@@ -57,7 +57,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href="../landingpage.html"
 									>Home</a
 								>
 							</li>
