--- a/HTML/Mentee-dashboard/bookings.html
+++ b/HTML/Mentee-dashboard/bookings.html
@@ -53,7 +53,7 @@
                                     class="nav-link active fs-5"
                                     id="first-link"
                                     aria-current="page"
-                                    href="/index.html"
+                                    href="../landingpage.html"
                                     >Home</a
                                 >
                             </li>
@@ -61,7 +61,7 @@
                                 <a
                                     class="nav-link fs-5"
                                     id="nav-link2"
-                                    href="#"
+                                    href="./bookings.html"
                                     >Dashboard</a
                                 >
                             </li>
@@ -69,8 +69,8 @@
                                 <a
                                     class="nav-link fs-5"
                                     id="nav-link2"
-                                    href="#"
-                                    >Responses</a
+                                    href="./resource.html"
+                                    >Resources</a
                                 >
                             </li>
                             <div class="btn-div d-flex gap-4 position-relative">
@@ -135,7 +135,7 @@
                                 alt=""
                             />
                             <a
-                                href="./Mentee-booking-response.html"
+                                href="./waitlist.html"
                                 class="text-black ms-2"
                                 >Join Waitlist</a
                             >
@@ -224,7 +224,7 @@
                     <h5 class="fs-4">Bookings</h5>
                     <p class="mb-5">The session timings are following your local timezone Africa/Lagos</p>
                     <a href="" class="border-bottom border-black text-black border-3 me-5 pe-5 fs-5">Upcoming</a>
-                    <a href="" class="text-black mx-5 px-5 fs-5">Pending</a>
+                    <a href="./Mentee-booking-response.html" class="text-black mx-5 px-5 fs-5">Pending</a>
                     <a href="" class="text-black ms-5 ps-5 fs-5">History</a>
                     <hr class="w-100 mb-4">
                     <div class="card text-center mb-3 w-75">
