--- a/HTML/Mentee-dashboard/mentee-coach-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-coach-dashboard-1.html
@@ -249,7 +249,7 @@
 						<button
 							class="btn btn-2 btn-outline-light px-5 py-2"
 							type="submit"
-							onclick="window.location.href=''"
+							onclick="window.location.href='./book-mentor.html'"
 						>
 							Book Coach
 						</button>
