--- a/HTML/Mentee-dashboard/waitlist.html
+++ b/HTML/Mentee-dashboard/waitlist.html
@@ -50,7 +50,7 @@
                                 class="nav-link active fs-5"
                                 id="first-link"
                                 aria-current="page"
-                                href="/index.html"
+                                href="../landingpage.html"
                                 >Home</a
                             >
                         </li>
@@ -58,7 +58,7 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
+                                href="./mentee-dashboard-1.html"
                                 >Dashboard</a
                             >
                         </li>
@@ -66,8 +66,8 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
-                                >Responses</a
+                                href="./resource.html"
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
@@ -435,7 +435,7 @@
                         <button
 							class="btn signup-btn w-50 mx-5 text-white py-2 fs-5 mt-4" 
 							type="submit"
-							onclick="window.location.href=''"
+							onclick="window.location.href='./mentee-dashboard-1.html'"
 						>
 							Submit
 						</button>
