--- a/HTML/landingpage.html
+++ b/HTML/landingpage.html
@@ -26,12 +26,12 @@
 			  <img  style="height: 120px;" src="../Images/Logo1.png" alt="">
 		
 			  <ul class="navlist">
-				<li><a href="./index.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 				<li><a href="/HTML/AboutUs.html">About Us</a></li>
 				<li id="service"><a href="#">Services</a>
 				  <ul id="list">
-					<li><a href="/HTML/LogIn.html" class="protect-link">Agile Coaching</a></li>
-					<li><a href="/HTML/LogIn.html" class="protect-link">Mentorship</a></li>
+					<li><a href="/HTML/Mentee-dashboard/mentee-coach-dashboard-1.html" class="protect-link">Agile Coaching</a></li>
+					<li><a href="" class="protect-link">Mentorship</a></li>
 				  </ul>
 				</li>
 				<li><a href="./HTML/Contact.html">Contact Us</a></li>
