--- a/index.html
+++ b/index.html
@@ -384,8 +384,11 @@
     <div class="toggle-div"><button id="toggleChatButton">Chat</button></div>
     <div class="chat-container" id="chatContainer">
         <div class="chat-header">
-            <button id="closeChatButton">Close</button>
-            Bluey
+            <button id="closeChatButton">x</button>
+            <div class="top-chat">
+              <img src="/Images/logo-no-bg.png" alt="" class="chatLogo-img">
+              <img src="/Images/online.svg" alt="">
+            </div>
         </div>
         <div class="chat-area" id="chatArea">
             <p>Hi there 👋,<br> I'm Bluey. How may I help you today?</p>
@@ -496,6 +499,6 @@
   </div>
  </footer>
   
-  <script src="./index.js"></script>
+  <script src="/index.js"></script>
 </body>
 </html>
