--- a/HTML/Agile-Coach/dashboard1.html
+++ b/HTML/Agile-Coach/dashboard1.html
@@ -73,8 +73,8 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
-									>Responses</a
+									href="./resource.html"
+									>Resources</a
 								>
 							</li>
 							<div class="btn-div d-flex gap-4 position-relative">
@@ -249,9 +249,9 @@
 						<button
 							class="btn btn-2 btn-outline-light px-5 py-2"
 							type="submit"
-							onclick="window.location.href=''"
+							onclick="window.location.href='./profile.html'"
 						>
-							See bookings
+							Edit profile
 						</button>
 					</div>
 					<div class="info-wrapper mt-5 border w-75">
