--- a/HTML/Mentee-dashboard/book-mentor.html
+++ b/HTML/Mentee-dashboard/book-mentor.html
@@ -53,7 +53,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href="../landingpage.html"
 									>Home</a
 								>
 							</li>
@@ -69,7 +69,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./resource.html"
 									>Resources</a
 								>
 							</li>
@@ -136,9 +136,9 @@
 								alt=""
 							/>
 							<a
-								href="./Mentee-booking-response.html"
+								href="./waitlist.html"
 								class="text-black ms-2"
-								>Waitlist</a
+								>Join waitlist</a
 							>
 						</div>
 						<div class="icon-links ps-3">
