--- a/HTML/Mentee-dashboard/mentee-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-dashboard-1.html
@@ -53,7 +53,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="/index.html"
+									href="../landingpage.html"
 									>Home</a
 								>
 							</li>
@@ -69,7 +69,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./resource.html"
 									>Resources</a
 								>
 							</li>
@@ -86,7 +86,7 @@
 									src="/Images/symbols-search.svg"
 									alt=""
 									class="position-absolute top-50 end-0 translate-middle-y me-3"
-									onclick="window.location.href=''"
+									onclick="window.location.href='./Mentee-m-search-results.html'"
 								/>
 							</div>
 							<div class="dashboard-profile d-flex gap-4 ms-5">
@@ -354,7 +354,7 @@
 								alt=""
 							/>
 							<a
-								href=""
+								href="./waitlist.html"
 								class="text-black ms-2"
 								>Join Waitlist</a
 							>
