--- a/HTML/Payment_successful.html
+++ b/HTML/Payment_successful.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../CSS/" />
+    <link rel="stylesheet" href="/CSS/Payment_successful.css" />
   </head>
   <body>
     <div class="payment-sucessful-page">
